Changes for 3.4.15rc1

New features:
...G...PS. [ZBXNEXT-4836] added license information and OpenSSL linking exception to README file, show crypto library version when started with '-V' (Andris)
.......PS. [ZBXNEXT-4782] improve out of memory error message by adding statistics and backtrace; improve something impossible has just happened error message by adding backtrace (vso)

Bug fixes:
...G...PS. [ZBX-15027] fixed startup failures due to orphaned or zombie processes remaining when zabbix daemon is terminated during startup (vso)
A......... [ZBX-14396] fixed memory usage during template full clone (gcalenko, Sasha)
...G...... [ZBX-14779] extended support of system.stat[ent], system.stat[cpu,pc], system.stat[cpu,ec] on IBM AIX to LPAR type 'dedicated' (Andris)
........S. [ZBX-14851] fixed the host visible name in the event details/messages from server when using long utf8 text (MVekslers)
.......P.. [ZBX-14887] fixed max count of records in the single json that proxy can send to the server (MVekslers)
.......PS. [ZBX-14972] fixed the case where data from non-monitored VMware services are not removed from vmware cache (MVekslers)
...G...PS. [ZBX-14856] added support for OpenSSL 1.1.1 (Andris)
.D.G...PS. [ZBX-14971] added note on runtime control with PID numbers larger than 65535 to server, proxy and agentd help messages and man pages (Andris)
A......... [ZBX-14734] fixed the verification of the assignment of two web checks with the same name from different templates to one host (vasilijs)
..F....... [ZBX-14749] fixed cloning inherited host prototype on host (vasilijs)
..F....... [ZBX-14663] fixed calculation of Y zero position in graph (miks)
A......... [ZBX-14865] fixed "Field "parent_itemid" cannot be set to NULL" error message while importing multiple templates (Sasha)
........S. [ZBX-14854] improved preprocessor worker performance (MVekslers)
..F....... [ZBX-14811] fixed color of the host name in the title of the Screens (vasilijs)