@@ -403,7 +403,11 @@ function DBselect($query, $limit = null, $offset = 0) {
 		$DB['TRANSACTION_NO_FAILED_SQLS'] = false;
 	}
 
-	CProfiler::getInstance()->profileSql(microtime(true) - $time_start, $query);
+	if (CApiService::$userData !== null && array_key_exists('debug_mode', CApiService::$userData)
+			&& CApiService::$userData['debug_mode'] == GROUP_DEBUG_MODE_ENABLED) {
+		CProfiler::getInstance()->profileSql(microtime(true) - $time_start, $query);
+	}
+
 	return $result;
 }
 
@@ -515,7 +519,11 @@ function DBexecute($query, $skip_error_messages = 0) {
 		$DB['TRANSACTION_NO_FAILED_SQLS'] = false;
 	}
 
-	CProfiler::getInstance()->profileSql(microtime(true) - $time_start, $query);
+	if (CApiService::$userData !== null && array_key_exists('debug_mode', CApiService::$userData)
+			&& CApiService::$userData['debug_mode'] == GROUP_DEBUG_MODE_ENABLED) {
+		CProfiler::getInstance()->profileSql(microtime(true) - $time_start, $query);
+	}
+
 	return (bool) $result;
 }
 
